# sersync-learning

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config/: config.xml
include/: CdnRefreshInterface.h  Daemon.h  Inotify.h  Interface.h  QueueRetry.h
lib/: CdnRefreshInterface.cpp  CommandInterface.cpp  FileSynchronize.cpp  HttpInterface.cpp  Initialize.cpp  Inotify.cpp  QueueFilter.cpp  QueueRetry.cpp  SocketInterface.cpp  xmlParser.cpp
